follow and comment function done

--- a/accounts/templates/accounts/login_fail.html
+++ b/accounts/templates/accounts/login_fail.html
@@ -1,4 +1,8 @@
 {% extends "accounts/layout.html" %}
+{% load static %}
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/login.css'%}">
+{% endlblock %}
 {% blcok content %}
 <div id="main_container">
 
