--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,9 +1,15 @@
 {% extends "accounts/layout.html" %}
 
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/login.css'%}">
+{% endblock %}
 {% block content %}
 <div id="main_container">
         <div class="form_container">
             <div class="form">
+                <h1 class="sprite_insta_big_logo title"></h1>
                 <form action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form.as_p }}
