--- a/accounts/templates/accounts/login_fail.html
+++ b/accounts/templates/accounts/login_fail.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/login.css'%}">
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endlblock %}
 {% blcok content %}
 <div id="main_container">
