--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -4,6 +4,7 @@
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/login.css'%}">
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock %}
 {% block content %}
 <div id="main_container">
