--- a/config/templates/layout.html
+++ b/config/templates/layout.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -32,7 +32,6 @@
     <title>instagram</title>
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'css/common.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css'%}">
     <link rel="shortcut icon" href="{% static 'imgs/instagram.png' %}">
 
     {% block head %}
@@ -67,7 +66,7 @@
 
 
             <div class="right_icons">
-                <div class="sprite_camera_icon"><a href="#"></a></div>
+                <div class="sprite_camera_icon"><a href="{% url 'post:post_new' %}"></a></div>
                 <div class="sprite_compass_icon"><a href="#"></a></div>
                 <div class="sprite_heart_icon_outline"><a href="follow.html"></a></div>
 
@@ -77,7 +76,7 @@
 
                 {% else %}
 
-                <div class="sprite_user_icon_outline"><a href="#"></a></div>
+                <div class="sprite_user_icon_outline"><a href="{% url 'accounts:login' %}"></a></div>
 
                 {% endif %}
             </div>
